dfir_rs/tests/compile-fail-stable/surface_source_stream_not_fused.rs
../compile-fail/surface_source_stream_not_fused.rs